--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,5 +1,10 @@
 $tag-apresentacao: CadetBlue !default;
 $tag-default: DimGrey;
+$tag-poesia: coral;
+
+body {
+    color: #202020;
+}
 
 // pra listagem dos post
 .tag-list{
@@ -33,6 +38,11 @@ $tag-default: DimGrey;
         background-color: $tag-default !important;
         color: white !important;
     }
+
+    &-poesia{
+        background-color: $tag-poesia !important;
+        color: white !important;
+    }
 }
 
 
@@ -45,6 +55,29 @@ $tag-default: DimGrey;
 
     &-apresentacao{
         color: $tag-apresentacao !important;
+    }
+
+    &-poesia{
+        color: $tag-poesia;
+    }
+    
+}
+
+
+
+blockquote {
+    color: #202020;
+    border-left: 0.25rem solid #bdbdbd;
+    background-color: #f5f5f5;
+    margin: .8rem 0;
+    padding: .5rem 1rem;
+    
+    p {
+        color: #202020
+    }
+      
+    @media (min-width: 600px) {
+        padding: 0.5rem 5rem 0.5rem 1.25rem;
     }
     
 }
