Added custom colors to tag MS in the blog

--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -12,6 +12,8 @@
             <div class="tag tag-apresentacao"> {{ tag }} </div>
           {% elsif tag == "Poesia"%}
             <div class="tag tag-poesia"> {{ tag }} </div>
+          {% elsif tag == "MS"%}
+            <div class="tag tag-MS"> {{ tag }} </div>
           {% else %}
             <div class="tag tag-default"> {{ tag }} </div>
           {% endif %}
