modifications for styles of tag colors

--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -14,6 +14,8 @@
             <div class="tag tag-poesia"> {{ tag }} </div>
           {% elsif tag == "MS"%}
             <div class="tag tag-MS"> {{ tag }} </div>
+          {% elsif tag == "Artes"%}
+            <div class="tag tag-artes"> {{ tag }} </div>
           {% else %}
             <div class="tag tag-default"> {{ tag }} </div>
           {% endif %}
