--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,6 +2,7 @@ $tag-apresentacao: CadetBlue !default;
 $tag-default: DimGrey;
 $tag-poesia: coral;
 $tag-MS: RoyalBlue;
+$tag-artes: Crimson;
 
 body {
     color: #202020;
@@ -46,6 +47,11 @@ body {
         color: white !important;
     }
 
+    &-artes{
+        background-color: $tag-artes !important;
+        color: white !important;
+    }
+
     &-default{
         background-color: $tag-default !important;
         color: white !important;
@@ -66,6 +72,10 @@ body {
 
     &-poesia{
         color: $tag-poesia !important;
+    }
+
+    &-artes{
+        color: $tag-artes !important;
     }
 
     &-MS{
