updated colors for tags

--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -16,6 +16,12 @@
             <div class="tag tag-MS"> {{ tag }} </div>
           {% elsif tag == "Artes"%}
             <div class="tag tag-artes"> {{ tag }} </div>
+          {% elsif tag == "RPG"%}
+            <div class="tag tag-RPG"> {{ tag }} </div>
+          {% elsif tag == "CoC"%}
+            <div class="tag tag-CoC"> {{ tag }} </div>
+          {% elsif tag == "Pantanal"%}
+            <div class="tag tag-Pantanal"> {{ tag }} </div>
           {% else %}
             <div class="tag tag-default"> {{ tag }} </div>
           {% endif %}
