--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -4,7 +4,7 @@ $tag-poesia:            coral;
 $tag-MS:                RoyalBlue;
 $tag-artes:             Crimson;
 $tag-CoC:               DarkMagenta;
-$tag-RPG:               Gold;
+$tag-RPG:               GoldenRod;
 $tag-Pantanal:          DarkGreen;
 
 body {
