added tags and colors for new post about guitar

--- a/_includes/catalogue_item.html
+++ b/_includes/catalogue_item.html
@@ -22,6 +22,8 @@
             <div class="tag tag-CoC"> {{ tag }} </div>
           {% elsif tag == "Pantanal"%}
             <div class="tag tag-Pantanal"> {{ tag }} </div>
+            {% elsif tag == "Violão"%}
+            <div class="tag tag-Violao"> {{ tag }} </div>
           {% else %}
             <div class="tag tag-default"> {{ tag }} </div>
           {% endif %}
