--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -6,6 +6,7 @@ $tag-artes:             Crimson;
 $tag-CoC:               DarkMagenta;
 $tag-RPG:               GoldenRod;
 $tag-Pantanal:          DarkGreen;
+$tag-Violao:            #937D6F;
 
 body {
     color: #202020;
@@ -74,6 +75,11 @@ body {
         background-color: $tag-RPG !important;
         color: white !important;
     } 
+
+    &-Violao{
+        background-color: $tag-Violao!important;
+        color: white !important;
+    }
 }
 
 
@@ -111,7 +117,10 @@ body {
     &-RPG{
         color: $tag-RPG !important;
     } 
-    
+
+    &-Violao{
+        color: $tag-Violao !important;
+    }
 }
 
 
