added support for comments using utterances and minor changes to pagination styles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     
     <span>
       &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> 
-      {{ site.author.name }}. Feito com Jekyll usando  o tema <a href="https://github.com/chesterhow/tale/">Tale</a>.
+      {{ site.author.name }}. Feito com Jekyll usando  o tema <a href="https://github.com/chesterhow/tale/" target="_blank">Tale</a>. Comentários feitos usando o app <a href="https://utteranc.es" target="_blank">Utterances </a>.
     </span>
   </footer>
   
