--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,11 +29,24 @@ layout: default
 
 <div class="pagination">
   {% if page.next.url %}
-    <a href="{{ page.next.url | prepend: site.baseurl }}" class="left arrow">&#8592;</a>
+    <a href="{{ page.next.url | prepend: site.baseurl }}" class="right arrow">Post seguinte </a>
   {% endif %}
   {% if page.previous.url %}
-    <a href="{{ page.previous.url | prepend: site.baseurl }}" class="right arrow">&#8594;</a>
+    <a href="{{ page.previous.url | prepend: site.baseurl }}" class="left arrow">Post anterior</a>
   {% endif %}
+  <a href="#" class="top">Ir para o topo</a>
+</div>
 
-  <a href="#" class="top">Top</a>
+<div class="Utterances-wrapper">
+  <h1>Comentários</h1>
+
+  <script src="https://utteranc.es/client.js"
+        repo="https://github.com/kevyanue/kevyanue.github.io/"
+        issue-term="pathname"
+        label="Utterances"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+  </script>
+
 </div>
