fixed utterances configuration in script

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: default
   <h1>Comentários</h1>
 
   <script src="https://utteranc.es/client.js"
-        repo="https://github.com/kevyanue/kevyanue.github.io/"
+        repo="kevyanue/kevyanue.github.io"
         issue-term="pathname"
         label="Utterances"
         theme="github-light"
